# RepairIQ

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
docs/: index.html
src/: App.css  App.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: appfootprint.rs  archive.rs  battery.rs  browser.rs  duplicates.rs  forecast.rs  largefiles.rs  lib.rs  main.rs  memory.rs  network.rs  oldapps.rs  privacy.rs  scanner.rs  startup.rs  timemachine.rs  vault.rs
src/components/: Browsers.tsx  ConfirmDialog.tsx  Dashboard.tsx  Duplicates.tsx  Explorer.tsx  MacHealth.tsx  Onboarding.tsx  Settings.tsx  SmartArchive.tsx  Toast.tsx  Treemap.tsx  Vault.tsx
src/hooks/: useScanner.ts
src/types/: index.ts
