[package]
name = "repairiq"
version = "0.2.0"
description = "Diagnose before you act — safely reclaim Mac storage"
authors = ["RepairIQ"]
edition = "2021"

[lib]
name = "repairiq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
rayon = "1.10"
